styles/home.css
.home-page-body {
    background-color: var(--pastel-yellow);
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}


.hero-banner {
    background-color: var(--dark-blue);
    display: flex;
    justify-content: center;
    background-size: 50px 50px;
  background-image:
    linear-gradient(to right, #335677 1.5px, transparent 2px),
    linear-gradient(to bottom, #335677 1.5px, transparent 1px);
    background-attachment: fixed;
    margin-bottom: 40px;
}

.hero-banner-items {
    display: flex;
    flex-grow: 1;
    justify-content: space-evenly;
    align-items: center;
    color: var(--pastel-yellow);
    height: calc(100vh - 40px - 200px);
    min-height: 450px;
    max-width: 1700px;
    max-height: 1080px;
}

.banner-text {
    color: var(--light-blue);
    text-align: center;
    display: flex;
    font-size: 27px;
    flex-direction: column;
    justify-content: space-between;
    padding: 30px;
    max-height: 300px;
    height: 100%;
}

.hero-image {
    height: 100%;
    margin-right: 30px;
    width: auto;
    transform: translate(0, 0);
}


.gradient-logo {
    font-weight: 900;
    font-size: 70px;
    overflow: break-all;
    background: linear-gradient(
        90deg,
        var(--light-blue),
        var(--pastel-yellow),
        var(--pastel-peach),
        var(--light-blue)
      )
      0 0 / 400% 100%;
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
  }

  @media (prefers-reduced-motion: no-preference) {
    .gradient-logo {
      animation: move-bg 12s linear infinite;
    }
    @keyframes move-bg {
      to {
        background-position: 400% 0;
      }
    }
  }
  

.start-button {
    color: var(--dark-blue);
    height: 60px;
    background-color: var(--light-blue);
    border: 0;
    border-radius: 10px;
    width: 160px;
    transition: 0.1s;
    font-size: 20px;
    font-weight: 700;
}

.subtitle {
    max-width: 500px;
}

.start-button:hover {
    box-shadow: 0px 0px 8px 1px rgba(156, 224, 238, 0.8);
    color: var(--pastel-yellow);
    transform: scale(1.025);
}

.tagline {
    font-weight: 500;
    font-size: 40px;
    flex-grow: 1;
}

.tagline-sub {
    font-size: 23px;
    font-weight: 500;
    margin-bottom: 60px;
}

.page-content-wrapper {
    padding-top: 25px;
    padding-bottom: 25px;
    width: calc(100% - 50px);
    max-width: 1280px;
    display: flex;
    flex-direction: column;
    align-self: center;
    justify-content: center;
}

.feature-image {
  height: 300px;
  width: auto;
}

.feature-text-image-wrapper {
  display: grid;
  grid-template-columns: 50% 50%;
  margin-bottom: 25px;
}

.closing-feature {
  margin-bottom: 40px;
}

.feature-text-wrapper {
  margin-right: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.feature {
  font-size: 20px;
}

.feature-title {
  font-weight: 700;
  font-size: 27px;
  margin-bottom: 20px;
}

.feature-image-wrapper {
  position: relative;
  overflow: hidden;
  align-items: center;
  justify-content: right;
  display: flex;
}

.feature-text {
  line-height: 125%;
}

.inner-gradient {
  position: absolute;
  left: 0;
  width: 200px;
  height: 100%;
  background: linear-gradient(
        90deg,
        var(--pastel-yellow),
        rgba(252, 245, 216, 0)
      )

}

.inner-gradient-right {
  position: absolute;
  right: 0;
  width: 200px;
  height: 100%;
  background: linear-gradient(
        270deg,
        var(--pastel-yellow),
        rgba(252, 245, 216, 0)
      )

}

.feature-2 {
  margin-top: 30px;
  margin-bottom: 30px;
}

.feature-3 {
  margin-bottom: 45px;
}

.feature-image-wrapper-2 {
  order: -1;
  justify-content: left;
  position: relative;
}

footer {
  padding-left: 0px;
  height: 100px;
  display: flex;
  justify-items: center;
  align-items: center;
  flex-direction: row;
}

.start-button-2 {
  background-color: var(--dark-blue);
  color: var(--light-blue);
}

.start-button-2:hover {
  box-shadow: 0px 0px 8px 4px var(--pastel-yellow);
}

.footer-content-wrapper {
  flex-grow: 1;
  display: flex;
  justify-content: center;
}

.footer-button {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  padding-left: 20px;
  max-width: 1300px;
}

.icon {
  border-radius: 5px;
  height: 40px;
  margin-left: 20px;
  display: none;
  box-shadow: 0px 3px 25px rgba(159, 158, 165, 0.075), 0px 3px 5px rgba(0, 0, 0, 0.09);
}

@media screen and (max-width: 991px) {
  .icon {
    display: block;
  }
  #logo {
    display: none;
  }
  .hero-banner-items {
    justify-content: space-between;
    padding-left: 25px;
    padding-right: 25px
  }

  .banner-text {
    padding-left: 0;
    padding-right: 20px;
    font-size: 25px;
    text-align: left;
    height: 57%;
  }

  .gradient-logo {
    font-size: 60px;
  }

  .hero-image {
    height: auto;
    margin-right: 0;
    width: 100%;
    transform: translate(0, 0);
  }
}

@media screen and (max-width: 769px) {
  .feature-text-image-wrapper {
    display: flex;
    flex-direction: column-reverse;
    margin-bottom: 40px;
  }
  .feature-image-wrapper-2 {
    order: 0;
  }
  .feature-image-wrapper {
    margin-bottom: 30px;
    justify-content: center;
    overflow: visible;
  }
  .feature-image {
    width: 100%;
    height: 100%;
    max-width: 500px;
  }
    

  .inner-gradient, .inner-gradient-right {
    display: none;
  }
  .hero-banner {
    margin-bottom: 20px;
  }
  .icon {
    padding-left: 0;
  }
  .hero-banner-items {
    padding-top: 40px;
    padding-bottom: 40px;
    flex-direction: column;
    justify-content: center;
    min-height: 500px;
    padding-left: 0px;
    padding-right: 0px;
  }
  .gradient-logo {
    font-size: 50px;
    word-break: break-all;
  }
  .hero-image-wrapper {
    display: flex;
    justify-content: center;
    margin-top: 30px;
    margin-bottom: 30px;
  }
  .hero-image {
    width: 60%;
    height: auto;
  }
  .banner-text {
    padding-left: 0px;
    padding-right: 0px;
    text-align: center;
    min-height: 250px;
    max-height: 250px;
  }
  .tagline {
    font-size: 30px;
    word-break: break-word;
  }
  .feature-text {
    font-size: 18px;
  }
  .tagline-sub {
    font-size: 20px
  }
}

@media screen and (max-width: 400px) {
  .gradient-logo {
    font-size: 40px;
  }
  .subtitle {
    font-size: 20px;
  }
}

@media screen and (max-width: 370px) {
  .hero-image-wrapper {
    display: none;
  }
  .tagline {
    overflow-wrap: break-all;
  }
  header {
    overflow: hidden;
  }
  .page-content-wrapper {
    overflow: hidden;
  }
  footer {
    overflow: hidden;
  }
}

